8213574: Deadlock in string table expansion when dumping lots of CDS classes

Reviewed-by: jiangli, iklam, dholmes